deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          imagePullPolicy: Always
          image: tardis5159/hw6:user
          ports:
            - name: web
              containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          imagePullPolicy: Always
          image: tardis5159/hw6:order
          ports:
            - name: web
              containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-service
  template:
    metadata:
      labels:
        app: billing-service
    spec:
      containers:
        - name: billing-service
          imagePullPolicy: Always
          image: tardis5159/hw6:billing
          ports:
            - name: web
              containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          imagePullPolicy: Always
          image: tardis5159/hw6:notification
          ports:
            - name: web
              containerPort: 8000
