deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: apps
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: apps
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: apps
spec:
  selector:
    app: billing-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: apps
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
